--- a/Covid-19App/Storyboards/Base.lproj/Main.storyboard
+++ b/Covid-19App/Storyboards/Base.lproj/Main.storyboard
@@ -17,10 +17,10 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="D0U-xM-44W" kind="relationship" relationship="viewControllers" id="RXr-rU-ddk"/>
                         <segue destination="JAn-rT-xFR" kind="relationship" relationship="viewControllers" id="NxU-fR-0tC"/>
                         <segue destination="zst-85-Jae" kind="relationship" relationship="viewControllers" id="T88-ua-6pX"/>
                         <segue destination="W5A-Nh-p49" kind="relationship" relationship="viewControllers" id="YC9-aX-1od"/>
+                        <segue destination="ysn-j8-lR4" kind="relationship" relationship="viewControllers" id="nkH-Qa-YaJ"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gpu-Ea-xJe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -35,7 +35,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ejT-Q3-nNV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="462" y="-1316"/>
+            <point key="canvasLocation" x="371" y="-1343"/>
         </scene>
         <!--authVC-->
         <scene sceneID="ec7-O4-rNS">
@@ -45,17 +45,17 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pxq-A5-vt6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="383" y="-1275"/>
+            <point key="canvasLocation" x="193" y="-1416"/>
         </scene>
         <!--newsVC-->
         <scene sceneID="Cga-zW-3HN">
             <objects>
                 <viewControllerPlaceholder storyboardName="CoronaNews" referencedIdentifier="newsVC" id="D0U-xM-44W" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="News" image="book" catalog="system" id="92E-jv-jdR"/>
+                    <navigationItem key="navigationItem" id="OaZ-kQ-XaE"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d3g-xz-Kx8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="378" y="-1114"/>
+            <point key="canvasLocation" x="1431.1594202898552" y="-1257.5892857142856"/>
         </scene>
         <!--Test-->
         <scene sceneID="cpc-UG-buE">
@@ -72,6 +72,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fP7-eC-74K" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="572" y="-726"/>
+        </scene>
+        <!--News-->
+        <scene sceneID="MZI-mA-bYW">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ysn-j8-lR4" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="News" image="book" catalog="system" id="92E-jv-jdR"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fcl-gL-XTb">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="D0U-xM-44W" kind="relationship" relationship="rootViewController" id="Sji-N9-dgV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bXZ-KE-cRk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="828" y="-1392"/>
         </scene>
     </scenes>
     <resources>
